[build-system]
requires = [
    "setuptools>=42",
    "oldest-supported-numpy; python_version < '3.9'",
    "numpy>=2.0.0; python_version >= '3.9'",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = "pp* *musllinux*"
test-skip = "*i686 *win32 *-macosx_arm64"
before-test = "pip install cython; pip install git+https://github.com/thaler-lab/EnergyFlow.git"
test-command = "pytest {package}"
test-requires = ["pytest", "numpy", "pot", "energyflow"]
