[build-system]
requires = [
    "scikit-build-core",
    "oldest-supported-numpy; python_version < '3.9'",
    "numpy>=2.0.0; python_version >= '3.9'",
]
build-backend = "scikit_build_core.build"

[project]
name = "wasserstein"
description = "Python/C++ library for computing Wasserstein distances efficiently."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/thaler-lab/wasserstein"
Documentation = "https://thaler-lab.github.io/Wasserstein"
"Bug Tracker" = "https://github.com/thaler-lab/wasserstein/issues"

[tool.cibuildwheel]
skip = "pp* *musllinux*"
test-skip = "*i686 *win32 *-macosx_arm64"
before-test = "pip install cython; pip install git+https://github.com/thaler-lab/EnergyFlow.git"
test-command = "pytest {package}"
test-requires = ["pytest", "numpy", "pot", "energyflow"]
