[metadata]

name = Wasserstein
description = Python package wrapping C++ code for computing Wasserstein distances
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPL-3.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkomiske/Wasserstein
project_urls =
    Changelog = https://github.com/pkomiske/Wasserstein/blob/master/CHANGELOG.md
    Documentation = https://pkomiske.github.io/Wasserstein/
    Issues = https://github.com/pkomiske/Wasserstein/issues

keywords =
    distance
    earth mover's distance
    energy mover's distance
    emd
    fastjet
    fjcontrib
    hidden geometry
    irc-safe
    infrared safety
    metric
    optimal transport
    ot
    particle physics
    wasserstein
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]

packages = find:
zip_safe = False

python_requires =
    >= 3.5

install_requires =
    numpy >= 1.12.0
    wurlitzer >= 2.0.0

[options.extras_require]

test =
    energyflow
    pot
    pytest
